# FeedBackAgregatorBot

./: .pre-commit-config.yaml  Dockerfile  compile-translation.sh  main.py  pyproject.toml
src/: enums.py  logger.py  settings.py  sheets_client.py  translation.py
src/locales/en/LC_MESSAGES/: messages.mo  messages.po
src/locales/ua/LC_MESSAGES/: messages.mo  messages.po
